RIA-6516 Incorporate other refactoring